# DT4LC-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  docker-compose.yml  paper.bib  paper.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docker.yml
cognitive_ui/: .dockerignore  Dockerfile  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
cognitive_ui/src/: App.tsx  index.css
cognitive_ui/src/api/: client.ts
cognitive_ui/src/api/hooks/: useGEEData.ts  useHealth.ts  useJobs.ts  useMLModels.ts  useUpload.ts
cognitive_ui/src/components/chat/: ChatHistory.tsx  FileUploadDropzone.tsx  ImagePreviewModal.tsx  JobResultCard.tsx
cognitive_ui/src/components/jobs/: JobResult.tsx
cognitive_ui/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
cognitive_ui/src/components/map/: BandChannelSelector.tsx  CustomDatasetUpload.tsx  DataFetchPanel.tsx  DataSourceSelector.tsx  DatasetSelectionPanel.tsx  DrawControl.tsx  DrawToolbar.tsx  ExportLayerDialog.tsx  GEETileLayer.tsx  GeoTIFFLayer.tsx  JobLayersManager.tsx  LayerControl.tsx  LocationQuickAccess.tsx  MapContainer.tsx  QualityFilterControls.tsx  RegionPanel.tsx  SpectralIndexSelector.tsx  TimePeriodSelector.tsx
cognitive_ui/src/config/: datasets.ts
cognitive_ui/src/hooks/: useJobSync.ts
cognitive_ui/src/pages/: ChatPage.tsx  Dashboard.tsx  DataPage.tsx  JobDetailsPage.tsx  JobsPage.tsx  MapPage.tsx  ModelsPage.tsx  SettingsPage.tsx
cognitive_ui/src/store/: useAppStore.ts  useChatStore.ts
cognitive_ui/src/types/: index.ts
cognitive_ui/src/utils/: logger.ts
docs/: API.md  ARCHITECTURE.md  FILE_UPLOAD_FLOW.md  QUICKSTART.md  README.md
dta/: registry.yaml
dta/config/: __init__.py
dta/dti/: assets.py  cache.py  exceptions.py  executor.py  logging_config.py  metrics.py  raster.py  registry.py  schemas.py  validation.py
dta/dti/algorithms/: __init__.py  change_detection.py  evi.py  lulc_classifier.py  ndsi.py  ndvi.py  ndwi.py  snow_classifier.py  spectral_index.py  statistics.py
dta/dti/coe/: __init__.py  context_agent.py  intent_classifier.py  llm_planner.py  orchestrator.py  plan_validator.py  planner.py  triggers.py
dta/dti/coe/llm/: __init__.py  anthropic.py  apertus.py  base.py  config.py  dependencies.py  gemini.py  groq.py  mistral.py  ollama.py  router.py
dta/dti/data_sources/: gee_bulk_fetch.py  gee_common.py  gee_export.py  gee_landsat.py  gee_modis.py  gee_sentinel2.py  planetary_computer.py
dta/dti/models/: __init__.py  model_manager.py  registry.py
dta/dti/post_processing/: __init__.py  analysis_tools.py  insights.py  visualization.py
dta/dti/preprocessors/: __init__.py  scale_to_hls.py
dta/dti/utils/: __init__.py  data_source.py
examples/: vanilla_gemini_context.py
scripts/: download_prithvi.py
server/: __init__.py  app.py  cli.py  jobs.py  layer_metadata_store.py  logging_config.py  model_routes.py  schemas.py  utils.py
server/routes/: __init__.py  chat.py  files.py  gee.py  health.py  jobs.py  tiles.py
tests/: conftest.py  test_algorithms.py  test_api_contracts.py  test_cache.py  test_demos.py  test_demos_llm.py  test_executor.py  test_executor_load_routes.py  test_executor_no_env_mutation.py  test_intent_classifier.py  test_job_store.py  test_jobs.py  test_llm_providers.py  test_logging.py  test_metrics.py  test_models_delineate.py  test_models_prithvi.py  test_orchestrator.py  test_planner.py  test_registry.py  test_registry_driven_planning.py  test_triggers.py  test_utils_data_source.py  test_validation.py  test_visualization.py
