# --- Project Configuration ---

[project]
name = "dt4lc-project"
dynamic = ["version"]
description = "Scalable Digital Twin Models for Land Cover Change Detection Using Machine Learning"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"

dependencies = ["numpy>=2.2.5", "torch>=2.6.0", "python-dotenv>=1.1.0"]

[project.optional-dependencies]
# Development tools (linting, testing, type-checking)
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ipdb>=0.13.13",
    "types-requests>=2.32.0.20250328",
    "types-pyyaml>=6.0.12.20250402",
]

# Server: FastAPI backend with all ML/geo processing capabilities
server = [
    # Web framework
    "fastapi>=0.116.2,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    # Image processing
    "pillow>=10.0.0",
    "rasterio>=1.4.3",
    "opencv-python>=4.10.0",
    "matplotlib>=3.7.0",
    # ML models
    "pyyaml>=6.0.2",
    "einops>=0.8.1",
    "timm>=1.0.15",
    "ultralytics>=8.3.0",
    "huggingface-hub>=0.25.0",
    # Geo processing
    "shapely>=2.0.0",
    "pystac-client>=0.8.5",
    "planetary-computer>=1.0.0",
    "geopandas>=1.0.0",
    "mercantile>=1.2.0",
    "earthengine-api>=0.1.300",
    "google-auth>=2.0.0",
    # LLM agents
    "google-genai>=1.35.0,<2.0.0",
    "anthropic>=0.40,<1.0",
    # Utils
    "numba>=0.60.0",
    "tqdm>=4.66.0",
    "requests>=2.32.3",
]

[project.scripts]
dt4lc-api = "server.cli:run"

# --- Build System ---

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dta", "server"]
include = ["dta/py.typed"]

[tool.hatch.version]
path = "dta/__init__.py"

# --- Linting and Formatting ---

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_site_packages = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "build/", "scripts/", ".venv/"]

# Third-party libraries without type stubs accessible at install time.
# `types-PyYAML` and `types-requests` are dev deps but their import-untyped
# detection still triggers on bare `import yaml` / `import requests`.
[[tool.mypy.overrides]]
module = ["yaml", "requests"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 119
target-version = "py310"
extend-exclude = ["__pycache__", "build", "dist", ".git", ".mypy_cache", ".pytest_cache", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["dta", "server"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-rfE",
    "--color=yes",
    "--durations=40",
    "--cov=dta",
    "--cov=server",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
    "slow: marks tests as slow (require model downloads or heavy computation)",
    "llm: marks tests that require LLM API access (skip with -m 'not llm')",
    "gpu: marks tests that require a GPU and installed ML models",
    "network: marks tests that hit external services (GEE, MPC) and need credentials",
]
